--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "firebase": "^8.4.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
