--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@nuxtjs/firebase": "^7.5.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.9.1",
+    "crypto-js": "^4.0.0",
     "firebase": "^8.4.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
