--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "firebase": "^8.4.1",
     "nuxt": "^2.15.3",
     "tweetnacl": "^1.0.3",
-    "tweetnacl-util": "^0.15.1"
+    "tweetnacl-util": "^0.15.1",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^6.0.0",
