--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.0.0",
     "firebase": "^8.4.1",
     "nuxt": "^2.15.3",
+    "seedrandom": "^3.0.5",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "vuex-persist": "^3.1.3"
